Moved map to main page, added markers for all stops, added detail nav

--- a/src/theme/theme.dark.scss
+++ b/src/theme/theme.dark.scss
@@ -15,12 +15,16 @@ $colors: (
 
   ion-item{
     color: color($colors, light);
+    /*
+    height: 72px;
+    left: 16px;
+    right: 16px;
+    top: 8px;*/
   }
 
   button{
     color: color($colors, light);
   }
-
 
   .toolbar-title {
     color: color($colors, light);
