--- a/src/theme/theme.light.scss
+++ b/src/theme/theme.light.scss
@@ -5,8 +5,14 @@
     secondary:  #86C4FF,
     danger:     #f53d3d,
     light:      #f4f4f4,
-    dark:       #125972
+    dark:       #125972,
+    tertiary:   #A1DAEF,
   );
+
+  ion-content {
+    background-color: color($colors, tertiary);
+    color: black;
+  }
 
   ion-item{
     background-color: color($colors, secondary);
@@ -18,17 +24,28 @@
     top: 8px; */
   }
 
-  button{
+  h3{
     color: color($colors, light);
+  }
+
+  .rightAlign{
+    color : black;
+    float : right;
+  }
+
+  .leftAlign{
+    color : black;
+    color: color($colors, light);
+  }
+
+  button{
+    color: black;
     background-color: color($colors, secondary);
   }
 
-  ion-content {
-    background-color: color($colors, secondary);
-  }
 
   .toolbar-background {
-    background-color: #A1DAEF;
+    background-color: color($colors, tertiary);
   }
 
   .toolbar-title {
