--- a/src/theme/theme.light.scss
+++ b/src/theme/theme.light.scss
@@ -55,5 +55,12 @@
   .tabs-md-primary .tab-button, .tabs-md-primary .tab-button-icon {
     color: black;
     background-color: black;
-    }
+  }
+
+  .mapButton{
+    color: color($colors, secondary);
+    background-color: color($colors, dark);
+    font-size: 18px;
+    font-weight: 500;
+  }
 }
