--- a/src/theme/theme.dark.scss
+++ b/src/theme/theme.dark.scss
@@ -19,6 +19,7 @@
     background-color: color($colors, secondary);
     color: color($colors, light);
     padding: 5px;
+
     /*
     height: 72px;
     left: 16px;
@@ -27,6 +28,7 @@
   }
 
   ion-toggle{
+    background-color: color($colors, primary);
     color : black;
   }
 
@@ -75,7 +77,6 @@
 
   .themeSwitch{
     background-color: color($colors, tertiary);
-    color: color($colors, textCol);
+    color: color($colors, light);
   }
-
 }
