--- a/src/theme/theme.light.scss
+++ b/src/theme/theme.light.scss
@@ -70,4 +70,9 @@
     font-size: 18px;
     font-weight: 500;
   }
+
+  .themeSwitch{
+    background-color: color($colors, tertiary);
+    color: color($colors, primary);
+  }
 }
